fixed image scroll on mobile

--- a/style.css
+++ b/style.css
@@ -285,12 +285,12 @@ h1 {
 .bullet-box {
   flex-basis: calc(33.33% - 20px);
   padding: 20px;
-  margin-bottom: 10px;
+  margin: 10px auto;
   background-color: #f5f5f5;
   transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   border: 1px solid #ccc;
   border-radius: 10px;
-  box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+  box-shadow: 2px 2px 4px rgba(49, 38, 38, 0.2);
   text-align: center;
 }
 
